@@ -27,6 +27,7 @@ import org.hyperledger.iroha.android.model.TransactionPayload;
 import org.hyperledger.iroha.android.norito.NoritoJavaCodecAdapter;
 import org.hyperledger.iroha.android.sccp.SccpLaneIdV1;
 import org.hyperledger.iroha.android.sccp.SccpNetworkV1;
+import org.hyperledger.iroha.android.sccp.SccpReplayV1;
 import org.hyperledger.iroha.android.sccp.SccpV1;
 import org.hyperledger.iroha.android.testing.TestEd25519Keys;
 import org.hyperledger.iroha.norito.CRC64;
@@ -39,33 +40,25 @@ public final class SccpClientExactTests {
   private static final String TAIRA_CHAIN_ID =
       "fc56984b-2be7-431d-840e-21514d1883f0";
   private static final String AUTHORITY = canonicalAuthority(0x11);
-  private static final String OTHER_AUTHORITY = canonicalAuthority(0x12);
   private static final FeePaymentIntent BRIDGE_FEE_PAYMENT =
       FeePaymentIntent.authority(Collections.emptyList());
   // These authenticate this fixture's semantic commitments and deployment code hashes.
   private static final String BSC_ROUTE_CONFIG_HASH =
-      "E2FBA818710881B2294D45EB6494A0F2961C752EADC2D55089C3966F0CC8124D";
+      "C4A175427B008B94CC6E4F1276159F1D4B8ED189C3FC44FE82C2D61796C4087B";
   private static final String TRON_ROUTE_CONFIG_HASH =
-      "83D698E3F098A15523BD456ED7BB73957DDC46C48DC6B2701BC73AEBEDA99F3B";
-  private static final BigInteger MAX_OUTSTANDING_LIABILITY =
-      new BigInteger("1000000000000");
-  private static final BigInteger MAX_WRAPPED_SUPPLY =
-      new BigInteger("1000000000000000000000");
-  private static final BigInteger MAX_U128 =
-      BigInteger.ONE.shiftLeft(128).subtract(BigInteger.ONE);
+      "3BE243342816715682C310E991E134099A1F7EE46B08ABE095FF130B0DD5CA2E";
 
   private SccpClientExactTests() {}
 
   public static void main(final String[] args) throws Exception {
     submitDtosExposeOnlyClosedArtifactFields();
     binaryProofRequestAcceptsOnlyTheTwoConcreteCurveTypes();
-    signedSubmitPreservesExactTairaSponsorAcrossControllerOnlyWireIdentity();
+    transactionCodecPreservesExactTairaSponsorAcrossControllerOnlyWireIdentity();
     submitAuthorityRequiresExactTairaDiscriminant();
     submitPreflightRejectsRetiredOverridesAndSecrets();
     artifactValidationRejectsAliasesCorruptionAndZeroSchema();
     capabilitiesAreExactAndContainNoRetiredDiscoverySurface();
     registryValidatesSemanticPolicyAndExactFamilies();
-    registryRequiresExactU128SupplyCapAndOutstandingLiability();
     registryValidatesExactTonDeploymentAndRoleSeparation();
     registryRejectsMalformedAnchorHistories();
     registryRequiresExactRetiredRouteInboundFinalityCutoff();
@@ -97,102 +90,52 @@ public final class SccpClientExactTests {
     final SccpNativeMessageSubmitRequest message =
         messageRequest(AUTHORITY, nativeArtifact);
     assert message.toJsonMap().keySet().equals(
-        Set.of("authority", "fee_payment", "native_proof_b64"));
+        Set.of("authority", "fee_payment", "native_proof_b64", "replay_witness_b64"));
     HttpClientTransport.preflightSccpBridgeSubmitJson(
         message.toJsonBytes(), "/v1/bridge/messages");
-
-    final byte[] transactionBytes;
-    try {
-      transactionBytes =
-          new NoritoJavaCodecAdapter(SccpV1.TAIRA_I105_DISCRIMINANT_V1)
-              .encodeTransaction(
-                  TransactionPayload.builder()
-                      .setFeePayment(FeePaymentIntent.authority(Collections.emptyList()))
-                      .setNetworkId(
-                          org.hyperledger.iroha.android.testing.TestNetworkIds.canonical())
-                      .setAuthority(AUTHORITY)
-                      .setCreationTimeMs(7)
-                      .setInstructions(Collections.emptyList())
-                      .setAdmissionIntent(TransactionAdmissionIntent.QUEUE_PLAN_SYNCED)
-                      .build());
-    } catch (final Exception ex) {
-      throw new IllegalStateException("encode exact SCCP transaction fixture", ex);
-    }
-    final String transaction = Base64.getEncoder().encodeToString(transactionBytes);
-    final byte[] gasBoundTransaction;
-    try {
-      gasBoundTransaction =
-          new NoritoJavaCodecAdapter(SccpV1.TAIRA_I105_DISCRIMINANT_V1)
-              .encodeTransaction(
-                  TransactionPayload.builder()
-                      .setFeePayment(FeePaymentIntent.authority(Collections.emptyList(), 9L))
-                      .setNetworkId(
-                          org.hyperledger.iroha.android.testing.TestNetworkIds.canonical())
-                      .setAuthority(AUTHORITY)
-                      .setCreationTimeMs(7)
-                      .setInstructions(Collections.emptyList())
-                      .setAdmissionIntent(TransactionAdmissionIntent.QUEUE_PLAN_SYNCED)
-                      .build());
-    } catch (final Exception ex) {
-      throw new IllegalStateException("encode fee-bound SCCP transaction fixture", ex);
-    }
+    new SccpNativeMessageSubmitRequest(
+        AUTHORITY,
+        nativeArtifact,
+        Base64.getEncoder()
+            .encodeToString(
+                canonicalReplayWitnessBytes(
+                    new byte[32], new byte[32], new byte[32], List.of())),
+        BRIDGE_FEE_PAYMENT);
     expectFailure(
         () ->
-            destinationRequest(
+            new SccpNativeMessageSubmitRequest(
                 AUTHORITY,
-                artifact,
-                Base64.getEncoder().encodeToString(fill(64, 1)),
-                Base64.getEncoder().encodeToString(gasBoundTransaction),
-                7L));
-    final String signature = Base64.getEncoder().encodeToString(fill(64, 1));
-    final String genericSignature = Base64.getEncoder().encodeToString(fill(65, 1));
-    assert SccpSubmitEncoding.normalizeOptionalSignature(genericSignature).equals(genericSignature);
-    final SccpDestinationProofSubmitRequest signed =
-        destinationRequest(
-            AUTHORITY, artifact, signature, transaction, 7L);
-    assert signed.toJsonMap().keySet().equals(
-        Set.of(
-            "authority",
-            "fee_payment",
-            "destination_proof_b64",
-            "signature_b64",
-            "transaction_payload_b64",
-            "creation_time_ms"));
-    HttpClientTransport.preflightSccpBridgeSubmitJson(
-        signed.toJsonBytes(), "/v1/bridge/proofs/submit");
-    final SccpNativeMessageSubmitRequest signedMessage =
-        messageRequest(
-            AUTHORITY, nativeArtifact, signature, transaction, 7L);
-    assert signedMessage.toJsonMap().keySet().equals(
-        Set.of(
-            "authority",
-            "fee_payment",
-            "native_proof_b64",
-            "signature_b64",
-            "transaction_payload_b64",
-            "creation_time_ms"));
-    HttpClientTransport.preflightSccpBridgeSubmitJson(
-        signedMessage.toJsonBytes(), "/v1/bridge/messages");
-    final String ordinaryTransaction;
-    try {
-      final NoritoJavaCodecAdapter codec =
-          new NoritoJavaCodecAdapter(SccpV1.TAIRA_I105_DISCRIMINANT_V1);
-      ordinaryTransaction =
-          Base64.getEncoder()
-              .encodeToString(
-                  codec.encodeTransaction(
-                      codec
-                          .decodeTransaction(transactionBytes)
-                          .toBuilder()
-                          .setAdmissionIntent(TransactionAdmissionIntent.ORDINARY)
-                          .build()));
-    } catch (final Exception ex) {
-      throw new IllegalStateException("encode ordinary SCCP transaction fixture", ex);
-    }
+                nativeArtifact,
+                Base64.getEncoder()
+                    .encodeToString(
+                        canonicalReplayWitnessBytes(
+                            fill(32, 1), new byte[32], Collections.emptyList())),
+                BRIDGE_FEE_PAYMENT));
+    final byte[] defaultBitmap = new byte[32];
+    defaultBitmap[31] = 1;
     expectFailure(
         () ->
-            destinationRequest(
-                AUTHORITY, artifact, signature, ordinaryTransaction, 7L));
+            new SccpNativeMessageSubmitRequest(
+                AUTHORITY,
+                nativeArtifact,
+                Base64.getEncoder()
+                    .encodeToString(
+                        canonicalReplayWitnessBytes(
+                            new byte[32],
+                            defaultBitmap,
+                            List.of(SccpReplayV1.emptyHashes().get(0)))),
+                BRIDGE_FEE_PAYMENT));
+    final byte[] nonCompactWitness =
+        canonicalReplayWitnessBytes(new byte[32], new byte[32], List.of());
+    nonCompactWitness[NoritoHeader.HEADER_LENGTH - 1] = 0;
+    expectFailure(
+        () ->
+            new SccpNativeMessageSubmitRequest(
+                AUTHORITY,
+                nativeArtifact,
+                Base64.getEncoder().encodeToString(nonCompactWitness),
+                BRIDGE_FEE_PAYMENT));
+
     expectFailure(
         () ->
             HttpClientTransport.preflightSccpBridgeSubmitJson(
@@ -202,32 +145,12 @@ public final class SccpClientExactTests {
             HttpClientTransport.preflightSccpBridgeSubmitJson(
                 proof.toJsonBytes(), "/v1/bridge/messages"));
 
-    final SccpSubmitExecutor submitExecutor =
-        new SccpSubmitExecutor(List.of("application/json"));
-    final HttpClientTransport transport =
-        HttpClientTransport.withExecutor(
-            submitExecutor,
-            ClientConfig.builder()
-                .setBaseUri(URI.create("https://torii.example"))
-                .build());
-    transport.submitSccpDestinationProof(proof).join();
-    transport.submitSccpNativeMessage(message).join();
-    assert submitExecutor.requests.size() == 2;
-    assert submitExecutor.requests.stream()
-        .allMatch(request -> request.maximumResponseBytes() == 64L * 1024L * 1024L);
-
-    final SccpSubmitExecutor missingContentType = new SccpSubmitExecutor(List.of());
-    final HttpClientTransport strictTransport =
-        HttpClientTransport.withExecutor(
-            missingContentType,
-            ClientConfig.builder()
-                .setBaseUri(URI.create("https://torii.example"))
-                .build());
-    try {
-      strictTransport.submitSccpDestinationProof(proof).join();
-      throw new AssertionError("SCCP submit must reject a missing Content-Type");
-    } catch (final CompletionException expected) {
-      // Expected.
+    for (final String removedWrite :
+        List.of("submitSccpDestinationProof", "submitSccpNativeMessage")) {
+      assert Arrays.stream(IrohaClient.class.getMethods())
+          .noneMatch(method -> method.getName().equals(removedWrite));
+      assert Arrays.stream(HttpClientTransport.class.getMethods())
+          .noneMatch(method -> method.getName().equals(removedWrite));
     }
   }
 
@@ -263,14 +186,15 @@ public final class SccpClientExactTests {
     }
   }
 
-  static void signedSubmitPreservesExactTairaSponsorAcrossControllerOnlyWireIdentity()
+  static void transactionCodecPreservesExactTairaSponsorAcrossControllerOnlyWireIdentity()
       throws Exception {
     final String selector =
         "testuﾛ1PｵEmｷjMZZﾑﾙeｱﾁﾎﾅﾂﾊmECepdbﾎｳ2uWﾃｸﾊﾘvｵi2ｦP1Y18A/cbsi_web";
     final FeeSponsorProgramId program = FeeSponsorProgramId.parse(selector);
     final FeePaymentIntent expectedFeePayment =
         FeePaymentIntent.sponsor(program, 1L, Collections.emptyList(), 9L);
-    final NoritoJavaCodecAdapter codec = new NoritoJavaCodecAdapter(SccpV1.TAIRA_I105_DISCRIMINANT_V1);
+    final NoritoJavaCodecAdapter codec =
+        new NoritoJavaCodecAdapter(SccpV1.TAIRA_I105_DISCRIMINANT_V1);
     final byte[] encoded =
         codec.encodeTransaction(
             TransactionPayload.builder()
@@ -290,63 +214,6 @@ public final class SccpClientExactTests {
     assert Arrays.equals(codec.encodeTransaction(decoded), encoded);
     assert program.literal().equals(selector);
 
-    final String signature = Base64.getEncoder().encodeToString(fill(64, 1));
-    final String transaction = Base64.getEncoder().encodeToString(encoded);
-    final SccpDestinationProofSubmitRequest request =
-        new SccpDestinationProofSubmitRequest(
-            AUTHORITY,
-            canonicalArtifact(),
-            expectedFeePayment,
-            signature,
-            transaction,
-            7L);
-    assert ((FeePaymentIntent.Sponsor) request.feePayment()).programId().literal()
-        .equals(selector);
-    new SccpNativeMessageSubmitRequest(
-        AUTHORITY,
-        canonicalNativeArtifact(),
-        expectedFeePayment,
-        signature,
-        transaction,
-        7L);
-
-    final List<FeePaymentIntent> mutations =
-        List.of(
-            FeePaymentIntent.sponsor(
-                new FeeSponsorProgramId(OTHER_AUTHORITY, "cbsi_web"),
-                1L,
-                Collections.emptyList(),
-                9L),
-            FeePaymentIntent.sponsor(
-                new FeeSponsorProgramId(program.sponsor(), "cbsi_fx"),
-                1L,
-                Collections.emptyList(),
-                9L),
-            FeePaymentIntent.sponsor(program, 2L, Collections.emptyList(), 9L),
-            FeePaymentIntent.sponsor(program, 1L, Collections.emptyList(), 10L),
-            FeePaymentIntent.authority(Collections.emptyList(), 9L));
-    for (final FeePaymentIntent mutation : mutations) {
-      final byte[] mutationBytes =
-          codec.encodeTransaction(
-              TransactionPayload.builder()
-                  .setNetworkId(
-                      org.hyperledger.iroha.android.testing.TestNetworkIds.canonical())
-                  .setAuthority(AUTHORITY)
-                  .setCreationTimeMs(7L)
-                  .setInstructions(Collections.emptyList())
-                  .setFeePayment(mutation)
-                  .setAdmissionIntent(TransactionAdmissionIntent.QUEUE_PLAN_SYNCED)
-                  .build());
-      expectFailure(
-          () ->
-              new SccpDestinationProofSubmitRequest(
-                  AUTHORITY,
-                  canonicalArtifact(),
-                  expectedFeePayment,
-                  signature,
-                  Base64.getEncoder().encodeToString(mutationBytes),
-                  7L));
-    }
     expectFailure(() -> new FeeSponsorProgramId(program.sponsor(), "cbsi_e\u0301"));
   }
 
@@ -402,10 +269,12 @@ public final class SccpClientExactTests {
             "bridge_address_hex",
             "tron_verifier_address",
             "manifest",
-            "job")) {
-      final Map<String, Object> body = map();
-      body.put("authority", AUTHORITY);
-      body.put("destination_proof_b64", artifact);
+            "job",
+            "signature_b64",
+            "transaction_payload_b64",
+            "creation_time_ms")) {
+      final Map<String, Object> body =
+          new LinkedHashMap<>(destinationRequest(AUTHORITY, artifact).toJsonMap());
       body.put(field, "retired");
       expectFailure(
           () ->
@@ -420,10 +289,12 @@ public final class SccpClientExactTests {
             "destination_proof_b64",
             "settlement",
             "asset_id",
-            "recipient")) {
-      final Map<String, Object> body = map();
-      body.put("authority", AUTHORITY);
-      body.put("native_proof_b64", artifact);
+            "recipient",
+            "signature_b64",
+            "transaction_payload_b64",
+            "creation_time_ms")) {
+      final Map<String, Object> body =
+          new LinkedHashMap<>(messageRequest(AUTHORITY, canonicalNativeArtifact()).toJsonMap());
       body.put(field, "retired");
       expectFailure(
           () ->
@@ -448,61 +319,6 @@ public final class SccpClientExactTests {
         () ->
             HttpClientTransport.preflightSccpBridgeSubmitJson(
                 duplicate.getBytes(StandardCharsets.UTF_8), "/v1/bridge/proofs/submit"));
-
-    final byte[] transactionBytes;
-    try {
-      transactionBytes =
-          new NoritoJavaCodecAdapter(SccpV1.TAIRA_I105_DISCRIMINANT_V1)
-              .encodeTransaction(
-                  TransactionPayload.builder().setFeePayment(org.hyperledger.iroha.android.model.FeePaymentIntent.authority(java.util.Collections.emptyList()))
-                      .setNetworkId(
-                          org.hyperledger.iroha.android.testing.TestNetworkIds.canonical())
-                      .setAuthority(AUTHORITY)
-                      .setCreationTimeMs(7)
-                      .setInstructions(Collections.emptyList())
-                      .setAdmissionIntent(TransactionAdmissionIntent.QUEUE_PLAN_SYNCED)
-                      .build());
-    } catch (final Exception ex) {
-      throw new IllegalStateException("encode exact SCCP transaction fixture", ex);
-    }
-    final String transaction = Base64.getEncoder().encodeToString(transactionBytes);
-    final String signature = Base64.getEncoder().encodeToString(fill(64, 1));
-    final List<Map<String, Object>> malformed = new ArrayList<>();
-    final Map<String, Object> signatureOnly = map();
-    signatureOnly.put("authority", AUTHORITY);
-    signatureOnly.put("destination_proof_b64", artifact);
-    signatureOnly.put("signature_b64", signature);
-    signatureOnly.put("creation_time_ms", 7);
-    malformed.add(signatureOnly);
-    final Map<String, Object> payloadOnly = map();
-    payloadOnly.put("authority", AUTHORITY);
-    payloadOnly.put("destination_proof_b64", artifact);
-    payloadOnly.put("transaction_payload_b64", transaction);
-    payloadOnly.put("creation_time_ms", 7);
-    malformed.add(payloadOnly);
-    final Map<String, Object> noTime = map();
-    noTime.put("authority", AUTHORITY);
-    noTime.put("destination_proof_b64", artifact);
-    noTime.put("signature_b64", signature);
-    noTime.put("transaction_payload_b64", transaction);
-    malformed.add(noTime);
-    final Map<String, Object> explicitNull = map();
-    explicitNull.put("authority", AUTHORITY);
-    explicitNull.put("destination_proof_b64", artifact);
-    explicitNull.put("signature_b64", null);
-    explicitNull.put("transaction_payload_b64", null);
-    malformed.add(explicitNull);
-    final Map<String, Object> explicitNullCreationTime = map();
-    explicitNullCreationTime.put("authority", AUTHORITY);
-    explicitNullCreationTime.put("destination_proof_b64", artifact);
-    explicitNullCreationTime.put("creation_time_ms", null);
-    malformed.add(explicitNullCreationTime);
-    for (final Map<String, Object> body : malformed) {
-      expectFailure(
-          () ->
-              HttpClientTransport.preflightSccpBridgeSubmitJson(
-                  jsonBytes(body), "/v1/bridge/proofs/submit"));
-    }
   }
 
   private static void artifactValidationRejectsAliasesCorruptionAndZeroSchema() {
@@ -539,10 +355,8 @@ public final class SccpClientExactTests {
         () ->
             destinationRequest(
                 AUTHORITY, Base64.getEncoder().encodeToString(zeroSchema)));
-    expectFailure(
-        () -> destinationRequest(AUTHORITY, encoded, null, null, 0L));
-    expectFailure(
-        () -> destinationRequest(AUTHORITY, encoded, "AQ==", null, null));
+    expectDetachedDestinationFieldsRejected(encoded, null, null, 0L);
+    expectDetachedDestinationFieldsRejected(encoded, "AQ==", null, null);
     final String signature = Base64.getEncoder().encodeToString(fill(64, 1));
     final String transaction;
     try {
@@ -551,7 +365,8 @@ public final class SccpClientExactTests {
               .encodeToString(
                   new NoritoJavaCodecAdapter(SccpV1.TAIRA_I105_DISCRIMINANT_V1)
                       .encodeTransaction(
-                          TransactionPayload.builder().setFeePayment(org.hyperledger.iroha.android.model.FeePaymentIntent.authority(java.util.Collections.emptyList()))
+                          TransactionPayload.builder()
+                              .setFeePayment(BRIDGE_FEE_PAYMENT)
                               .setNetworkId(
                                   org.hyperledger.iroha.android.testing.TestNetworkIds.canonical())
                               .setAuthority(AUTHORITY)
@@ -562,18 +377,10 @@ public final class SccpClientExactTests {
     } catch (final Exception ex) {
       throw new IllegalStateException("encode exact SCCP transaction fixture", ex);
     }
-    expectFailure(
-        () -> destinationRequest(
-            AUTHORITY, encoded, signature, null, 7L));
-    expectFailure(
-        () -> destinationRequest(
-            AUTHORITY, encoded, null, transaction, 7L));
-    expectFailure(
-        () -> destinationRequest(
-            AUTHORITY, encoded, signature, transaction, null));
-    expectFailure(
-        () -> destinationRequest(
-            AUTHORITY, encoded, signature, transaction, 8L));
+    expectDetachedDestinationFieldsRejected(encoded, signature, null, 7L);
+    expectDetachedDestinationFieldsRejected(encoded, null, transaction, 7L);
+    expectDetachedDestinationFieldsRejected(encoded, signature, transaction, null);
+    expectDetachedDestinationFieldsRejected(encoded, signature, transaction, 8L);
     final String wrongAuthorityTransaction;
     try {
       wrongAuthorityTransaction =
@@ -581,10 +388,11 @@ public final class SccpClientExactTests {
               .encodeToString(
                   new NoritoJavaCodecAdapter(SccpV1.TAIRA_I105_DISCRIMINANT_V1)
                       .encodeTransaction(
-                          TransactionPayload.builder().setFeePayment(org.hyperledger.iroha.android.model.FeePaymentIntent.authority(java.util.Collections.emptyList()))
+                          TransactionPayload.builder()
+                              .setFeePayment(BRIDGE_FEE_PAYMENT)
                               .setNetworkId(
                                   org.hyperledger.iroha.android.testing.TestNetworkIds.canonical())
-                              .setAuthority(OTHER_AUTHORITY)
+                              .setAuthority(canonicalAuthority(0x12))
                               .setCreationTimeMs(7)
                               .setInstructions(Collections.emptyList())
                               .setAdmissionIntent(TransactionAdmissionIntent.QUEUE_PLAN_SYNCED)
@@ -592,27 +400,10 @@ public final class SccpClientExactTests {
     } catch (final Exception ex) {
       throw new IllegalStateException("encode mismatched SCCP authority fixture", ex);
     }
-    expectFailure(
-        () ->
-            destinationRequest(
-                AUTHORITY, encoded, signature, wrongAuthorityTransaction, 7L));
-    expectFailure(
-        () ->
-            destinationRequest(
-                AUTHORITY,
-                encoded,
-                Base64.getEncoder().encodeToString(fill(64, 0)),
-                transaction,
-                7L));
-    expectFailure(
-        () ->
-            destinationRequest(
-                AUTHORITY,
-                encoded,
-                Base64.getEncoder()
-                    .encodeToString(fill(SccpSubmitEncoding.MAX_DETACHED_SIGNATURE_BYTES + 1, 1)),
-                transaction,
-                7L));
+    expectDetachedDestinationFieldsRejected(encoded, signature, wrongAuthorityTransaction, 7L);
+    expectDetachedDestinationFieldsRejected(
+        encoded, Base64.getEncoder().encodeToString(fill(64, 0)), transaction, 7L);
+    expectDetachedDestinationFieldsRejected(encoded, signature, transaction, 7L);
     final byte[] nativeProof =
         canonicalArtifactBytes(SccpSubmitEncoding.NATIVE_INBOUND_PROOF_SCHEMA_NAME, 0);
     messageRequest(
@@ -871,9 +662,10 @@ public final class SccpClientExactTests {
 
   private static void registryValidatesSemanticPolicyAndExactFamilies() {
     final Map<String, Object> exactRegistry = registry();
-    assert sourceIdentity(firstRoute(exactRegistry))
-        .get("route_config_hash")
-        .equals(BSC_ROUTE_CONFIG_HASH);
+    final String bscRouteConfigurationHash =
+        (String) sourceIdentity(firstRoute(exactRegistry)).get("route_config_hash");
+    assert bscRouteConfigurationHash.equals(BSC_ROUTE_CONFIG_HASH)
+        : bscRouteConfigurationHash;
     final SccpModels.RegistryV1 parsed =
         SccpJsonParser.parseRegistry(jsonBytes(exactRegistry));
     assert parsed.version == 1 && parsed.lanes.size() == 1;
@@ -924,55 +716,74 @@ public final class SccpClientExactTests {
             Map.of("source", network("solana-mainnet-beta"), "target", network("sora-taira")));
     expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(retired)));
 
+    final Map<String, Object> noncanonicalWireName = registry();
+    object(object(firstLane(noncanonicalWireName).get("lane_id")).get("source"))
+        .put("network", "bsc-mainnet");
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(noncanonicalWireName)));
+
     final Map<String, Object> wrongSchema = registry();
     final Map<String, Object> policy = object(deployment(wrongSchema).get("outbound_proof_policy"));
     object(object(policy.get("semantic_profile")).get("commitments"))
         .put("public_signal_schema_hash", upper(0x2e, 32));
     expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(wrongSchema)));
-  }
 
-  private static void registryRequiresExactU128SupplyCapAndOutstandingLiability() {
-    final SccpModels.RegistryV1 parsed =
-        SccpJsonParser.parseRegistry(jsonBytes(registry()));
-    final Map<String, Object> parsedRoute =
-        object(list(parsed.lanes.get(0), "routes").get(0));
-    final Map<String, Object> parsedDeployment =
-        object(object(parsedRoute.get("destination")).get("deployment"));
-    final Map<String, Object> parsedSettlement = object(parsedRoute.get("settlement"));
-    assert MAX_WRAPPED_SUPPLY.equals(parsedDeployment.get("max_wrapped_supply"));
-    assert MAX_OUTSTANDING_LIABILITY.equals(
-        new BigInteger(parsedSettlement.get("max_outstanding_liability").toString()));
+    final Map<String, Object> replayAddressAlias = registry();
+    deployment(replayAddressAlias)
+        .put("replay_verifier_address", deployment(replayAddressAlias).get("route_address"));
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(replayAddressAlias)));
 
-    final Map<String, Object> missingCap = registry();
-    deployment(missingCap).remove("max_wrapped_supply");
-    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(missingCap)));
+    final Map<String, Object> replayAddressSubstitution = registry();
+    deployment(replayAddressSubstitution).put("replay_verifier_address", upper(0x73, 20));
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(replayAddressSubstitution)));
 
-    final Map<String, Object> missingLiability = registry();
-    object(firstRoute(missingLiability).get("settlement"))
-        .remove("max_outstanding_liability");
-    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(missingLiability)));
+    final Map<String, Object> replayRuntimeSubstitution = registry();
+    deployment(replayRuntimeSubstitution).put("replay_verifier_code_hash", upper(0x44, 32));
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(replayRuntimeSubstitution)));
 
-    final Map<String, Object> oversizedCap = registry();
-    deployment(oversizedCap).put("max_wrapped_supply", MAX_U128.add(BigInteger.ONE));
-    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(oversizedCap)));
+    final Map<String, Object> breakerAddressSubstitution = registry();
+    deployment(breakerAddressSubstitution).put("mint_breaker_address", upper(0x74, 20));
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(breakerAddressSubstitution)));
 
-    final Map<String, Object> zeroLiability = registry();
-    object(firstRoute(zeroLiability).get("settlement"))
-        .put("max_outstanding_liability", BigInteger.ZERO);
-    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(zeroLiability)));
+    final Map<String, Object> breakerRuntimeSubstitution = registry();
+    deployment(breakerRuntimeSubstitution).put("mint_breaker_code_hash", upper(0x45, 32));
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(breakerRuntimeSubstitution)));
 
-    final Map<String, Object> mismatchedCap = registry();
-    deployment(mismatchedCap)
-        .put("max_wrapped_supply", MAX_WRAPPED_SUPPLY.add(BigInteger.ONE));
-    refreshRouteConfiguration(firstRoute(mismatchedCap));
-    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(mismatchedCap)));
+    final Map<String, Object> swappedRoles = registry();
+    final Map<String, Object> swappedDeployment = deployment(swappedRoles);
+    final Object replayAddress = swappedDeployment.get("replay_verifier_address");
+    final Object replayCodeHash = swappedDeployment.get("replay_verifier_code_hash");
+    swappedDeployment.put(
+        "replay_verifier_address", swappedDeployment.get("mint_breaker_address"));
+    swappedDeployment.put(
+        "replay_verifier_code_hash", swappedDeployment.get("mint_breaker_code_hash"));
+    swappedDeployment.put("mint_breaker_address", replayAddress);
+    swappedDeployment.put("mint_breaker_code_hash", replayCodeHash);
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(swappedRoles)));
 
-    final Map<String, Object> overflowingLiability = registry();
-    deployment(overflowingLiability).put("max_wrapped_supply", MAX_U128);
-    object(firstRoute(overflowingLiability).get("settlement"))
-        .put("max_outstanding_liability", MAX_U128);
-    refreshRouteConfiguration(firstRoute(overflowingLiability));
-    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(overflowingLiability)));
+    final Map<String, Object> emptyRuntimeHash = registry();
+    deployment(emptyRuntimeHash)
+        .put(
+            "mint_breaker_code_hash",
+            "C5D2460186F7233C927E7DB2DCC703C0E500B653CA82273B7BFAD8045D85A470");
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(emptyRuntimeHash)));
+
+    final Map<String, Object> zeroCap = registry();
+    deployment(zeroCap).put("max_wrapped_supply", 0);
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(zeroCap)));
+
+    final Map<String, Object> missingExecutionPolicy = registry();
+    firstRoute(missingExecutionPolicy).remove("sora_outbound_execution_policy");
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(missingExecutionPolicy)));
+
+    final Map<String, Object> wrongExecutionSemantics = registry();
+    object(firstRoute(wrongExecutionSemantics).get("sora_outbound_execution_policy"))
+        .put("semantics", "unproved_record_sccp_message_v1");
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(wrongExecutionSemantics)));
+
+    final Map<String, Object> wrongLiabilityCap = registry();
+    object(firstRoute(wrongLiabilityCap).get("settlement"))
+        .put("max_outstanding_liability", 8);
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(wrongLiabilityCap)));
   }
 
   private static void registryRejectsMalformedAnchorHistories() {
@@ -1149,17 +960,6 @@ public final class SccpClientExactTests {
         .equals(object(object(parsedLane.get("lane_id")).get("source")).get("network"));
     assert list(parsedLane, "routes").size() == 1;
 
-    final Map<String, Object> missingCap = tonRegistry();
-    tonDeployment(missingCap).remove("max_wrapped_supply");
-    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(missingCap)));
-
-    final Map<String, Object> mismatchedLiability = tonRegistry();
-    object(firstRoute(mismatchedLiability).get("settlement"))
-        .put(
-            "max_outstanding_liability",
-            MAX_OUTSTANDING_LIABILITY.subtract(BigInteger.ONE));
-    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(mismatchedLiability)));
-
     final Map<String, Object> changedInitialData = tonRegistry();
     tonDeployment(changedInitialData).put("jetton_master_initial_data_hash", upper(0x38, 32));
     tonDeployment(changedInitialData).put("route_initial_data_hash", upper(0x39, 32));
@@ -1193,6 +993,26 @@ public final class SccpClientExactTests {
     final Map<String, Object> uncompressedKey = tonRegistry();
     object(tonDeployment(uncompressedKey).get("verifying_key")).put("alpha1", upper(1, 48));
     expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(uncompressedKey)));
+
+    final Map<String, Object> unsortedGuardians = tonRegistry();
+    final Map<String, Object> unsorted =
+        object(tonDeployment(unsortedGuardians).get("mint_breaker_guardian_keys"));
+    unsorted.put("guardian_1", unsorted.get("guardian_0"));
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(unsortedGuardians)));
+
+    final Map<String, Object> zeroGuardian = tonRegistry();
+    object(tonDeployment(zeroGuardian).get("mint_breaker_guardian_keys"))
+        .put("guardian_0", upper(0, 32));
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(zeroGuardian)));
+
+    final Map<String, Object> zeroCap = tonRegistry();
+    tonDeployment(zeroCap).put("max_wrapped_supply", 0);
+    expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(zeroCap)));
+
+    assert SccpModels.requireTonAmountWithinCapV1(BigInteger.valueOf(9), BigInteger.TEN)
+        .equals(BigInteger.valueOf(9));
+    expectFailure(
+        () -> SccpModels.requireTonAmountWithinCapV1(BigInteger.valueOf(11), BigInteger.TEN));
   }
 
   private static void tonProofRequestBindsExactBlsSignalsAndProfile() {
@@ -1249,9 +1069,10 @@ public final class SccpClientExactTests {
     SccpJsonParser.parseRegistry(jsonBytes(anchorBound));
 
     final Map<String, Object> tron = tronRegistry();
-    assert sourceIdentity(firstRoute(tron))
-        .get("route_config_hash")
-        .equals(TRON_ROUTE_CONFIG_HASH);
+    final String tronRouteConfigurationHash =
+        (String) sourceIdentity(firstRoute(tron)).get("route_config_hash");
+    assert tronRouteConfigurationHash.equals(TRON_ROUTE_CONFIG_HASH)
+        : tronRouteConfigurationHash;
     SccpJsonParser.parseRegistry(jsonBytes(tron));
     firstRoute(tron).put("route_id", "taira_bsc_xor");
     expectFailure(() -> SccpJsonParser.parseRegistry(jsonBytes(tron)));
@@ -1290,13 +1111,16 @@ public final class SccpClientExactTests {
     assert request.soraFinalityAnchor.version == 1;
     assert request.soraFinalityAnchor.sourceNetwork == SccpNetworkV1.SORA_TAIRA;
     assert request.soraFinalityAnchor.chainIdHash.equals(tairaChainIdHash());
+    assert request.soraFinalityAnchor.epoch.equals(BigInteger.valueOf(7));
+    assert request.soraFinalityAnchor.epochEndHeight.equals(BigInteger.valueOf(150));
+    assert request.soraFinalityAnchor.rosterCommitment.equals(upper(0xa4, 32));
     assert request.soraFinalityAnchor.checkpointHeight.equals(BigInteger.valueOf(7));
     assert request.soraFinalityAnchor.checkpointBlockHash.equals(upper(0xa1, 32));
     assert request.soraFinalityAnchor.protocolVersion == 4;
     assert request.soraFinalityAnchor.checkpointContextId.equals(upper(0xa2, 32));
     assert request.soraFinalityAnchor.checkpointFinalityArtifactHash.equals(upper(0xa3, 32));
     assert request.soraFinalityAnchor.anchorHash.equals(
-        "0x4410ee4ccfd06f2d0e3a658615d516ac8cf65255d8a8716ce511ea95e135c8c3");
+        "0x9e9d4e602028b7ba99af5e47be644fbb3524e6240c284867faf9dfb85d873ba5");
     assert request.soraFinalityAnchor.anchorHash.equals(
         "0x" + finalityAnchorHash().toLowerCase());
 
@@ -1324,6 +1148,19 @@ public final class SccpClientExactTests {
     final Map<String, Object> booleanProtocol = proofRequest();
     object(booleanProtocol.get("sora_finality_anchor")).put("protocol_version", true);
     expectFailure(() -> SccpJsonParser.parseProofRequest(jsonBytes(booleanProtocol)));
+    final Map<String, Object> zeroEpoch = proofRequest();
+    object(zeroEpoch.get("sora_finality_anchor")).put("epoch", 0);
+    expectFailure(() -> SccpJsonParser.parseProofRequest(jsonBytes(zeroEpoch)));
+    final Map<String, Object> pastEpoch = proofRequest();
+    object(pastEpoch.get("sora_finality_anchor")).put("epoch_end_height", 6);
+    expectFailure(() -> SccpJsonParser.parseProofRequest(jsonBytes(pastEpoch)));
+    final Map<String, Object> aliasedRoster = proofRequest();
+    final Map<String, Object> rosterAnchor = object(aliasedRoster.get("sora_finality_anchor"));
+    rosterAnchor.put("roster_commitment", rosterAnchor.get("chain_id_hash"));
+    expectFailure(() -> SccpJsonParser.parseProofRequest(jsonBytes(aliasedRoster)));
+    final Map<String, Object> missingEpoch = proofRequest();
+    object(missingEpoch.get("sora_finality_anchor")).remove("epoch");
+    expectFailure(() -> SccpJsonParser.parseProofRequest(jsonBytes(missingEpoch)));
     final Map<String, Object> legacyAnchor = proofRequest();
     object(legacyAnchor.get("sora_finality_anchor")).put("validator_set_epoch", 3);
     expectFailure(() -> SccpJsonParser.parseProofRequest(jsonBytes(legacyAnchor)));
@@ -1606,6 +1443,19 @@ public final class SccpClientExactTests {
         "signing_message_b64",
         Base64.getEncoder().encodeToString(IrohaHash.prehash(transactionBytes)));
 
+    response.put("backend", "tron-groth16-bn254-v1");
+    response.put("counterparty_domain", 5);
+    response.put("counterparty_chain", "tron-mainnet");
+    assert !SccpBridgeSubmitResponse.parse(jsonBytes(response)).submitted;
+    response.put("counterparty_domain", 3);
+    expectFailure(() -> SccpBridgeSubmitResponse.parse(jsonBytes(response)));
+    response.put("counterparty_domain", 5);
+    response.put("counterparty_chain", "bsc-mainnet");
+    expectFailure(() -> SccpBridgeSubmitResponse.parse(jsonBytes(response)));
+    response.put("backend", "evm-groth16-bn254-v1");
+    response.put("counterparty_domain", 2);
+    response.put("counterparty_chain", "bsc-mainnet");
+
     final byte[] ordinaryTransactionBytes =
         new NoritoJavaCodecAdapter(SccpV1.TAIRA_I105_DISCRIMINANT_V1)
             .encodeTransaction(
@@ -1650,6 +1500,9 @@ public final class SccpClientExactTests {
     value.put("message_bundle_path", "/v1/sccp/proofs/message/{message_id}");
     value.put("proof_request_path", "/v1/sccp/proof-requests/{message_id}");
     value.put("recent_messages_path", "/v1/sccp/messages/recent");
+    value.put(
+        "sora_outbound_material_path",
+        "/v1/sccp/routes/{source_profile}/{route_id}/{asset_key}/{revision}/sora-outbound-material");
     final Map<String, Object> registryLimits = map();
     registryLimits.put("max_governed_lanes", 16);
     registryLimits.put("max_live_governed_routes", 64);
@@ -1799,6 +1652,9 @@ public final class SccpClientExactTests {
     anchor.put("source_network", network("sora-taira"));
     anchor.put("protocol_version", 4);
     anchor.put("chain_id_hash", tairaChainIdHash());
+    anchor.put("epoch", 7);
+    anchor.put("epoch_end_height", 150);
+    anchor.put("roster_commitment", upper(0xa4, 32));
     anchor.put("checkpoint_height", 7);
     anchor.put("checkpoint_block_hash", upper(0xa1, 32));
     anchor.put("checkpoint_context_id", upper(0xa2, 32));
@@ -1811,6 +1667,21 @@ public final class SccpClientExactTests {
     policy.put("version", 1);
     policy.put("semantic_profile", semanticProfile());
     policy.put("sora_finality_anchor", finalityAnchor());
+    return policy;
+  }
+
+  private static Map<String, Object> soraOutboundExecutionPolicy() {
+    final Map<String, Object> reference = map();
+    reference.put("backend", "stark/fri/v1");
+    reference.put("name", "ivm-execution-v1");
+    reference.put("version", 1);
+    reference.put("commitment", upper(0xb2, 32));
+    final Map<String, Object> policy = map();
+    policy.put("version", 1);
+    policy.put("semantics", "ivm_proved_record_sccp_message_v1");
+    policy.put("contract_artifact_sha256", upper(0xb1, 32));
+    policy.put("vk_ref", reference);
+    policy.put("gas_limit", 50_000_000);
     return policy;
   }
 
@@ -1928,6 +1799,9 @@ public final class SccpClientExactTests {
     final byte[] verifierCode = fill(32, 0x35);
     final byte[] circuit = hexBytes((String) object(semantic.get("commitments")).get("circuit_commitment"));
     final byte[] proofProfile = tonProofProfileCommitment();
+    final List<byte[]> guardians =
+        List.of(fill(32, 1), fill(32, 2), fill(32, 3), fill(32, 4), fill(32, 5));
+    final BigInteger maxWrappedSupply = BigInteger.valueOf(9_000_000_000L);
     final byte[] binding =
         tonDestinationBindingHash(
             masterCode,
@@ -1937,6 +1811,7 @@ public final class SccpClientExactTests {
             circuit,
             keyHash,
             proofProfile,
+            guardians,
             semanticHash,
             anchorHash);
     final byte[] configuration =
@@ -1948,11 +1823,12 @@ public final class SccpClientExactTests {
             circuit,
             keyHash,
             proofProfile,
+            guardians,
             semanticHash,
             anchorHash,
             binding,
             1,
-            MAX_OUTSTANDING_LIABILITY);
+            maxWrappedSupply);
 
     final Map<String, Object> identity = map();
     identity.put("address", routeAddress);
@@ -1978,18 +1854,22 @@ public final class SccpClientExactTests {
     deployment.put("verifying_key", key);
     deployment.put("verifier_key_hash", upperHex(keyHash));
     deployment.put("proof_profile_commitment", upperHex(proofProfile));
+    final Map<String, Object> guardianObject = map();
+    for (int index = 0; index < guardians.size(); index++) {
+      guardianObject.put("guardian_" + index, upperHex(guardians.get(index)));
+    }
+    deployment.put("mint_breaker_guardian_keys", guardianObject);
     deployment.put("outbound_proof_policy", policy);
     deployment.put("taira_to_token_multiplier", 1);
-    deployment.put("max_wrapped_supply", MAX_OUTSTANDING_LIABILITY);
+    deployment.put("max_wrapped_supply", maxWrappedSupply);
     final Map<String, Object> destination = map();
     destination.put("family", "ton");
     destination.put("deployment", deployment);
 
     final Map<String, Object> settlement = map();
     settlement.put("asset_definition_id", "6TEAJqbb8oEPmLncoNiMRbLEK6tw");
-    settlement.put("custody_owner", "sorauﾛ1PﾉｳﾇmEｴWｵebHﾑ6ﾔﾙｲヰiwuCWErJ7uｽoPGｱﾔnjﾑKﾋTCW2PV");
     settlement.put("payload_amount_scale", 9);
-    settlement.put("max_outstanding_liability", MAX_OUTSTANDING_LIABILITY);
+    settlement.put("max_outstanding_liability", maxWrappedSupply);
     final Map<String, Object> activation = map();
     activation.put("activation", "staged");
     activation.put("direction", null);
@@ -2002,6 +1882,7 @@ public final class SccpClientExactTests {
     route.put("inbound_finality_cutoff", null);
     route.put("source_identity", source);
     route.put("destination", destination);
+    route.put("sora_outbound_execution_policy", soraOutboundExecutionPolicy());
     route.put("settlement", settlement);
     final Map<String, Object> laneRecord = map();
     laneRecord.put("lane_id", tonLane());
@@ -2022,6 +1903,7 @@ public final class SccpClientExactTests {
       final byte[] circuit,
       final byte[] keyHash,
       final byte[] proofProfile,
+      final List<byte[]> guardians,
       final byte[] semanticHash,
       final byte[] anchorHash) {
     final ByteArrayOutputStream out = new ByteArrayOutputStream();
@@ -2040,11 +1922,12 @@ public final class SccpClientExactTests {
             verifierCode,
             circuit,
             keyHash,
-            proofProfile,
-            semanticHash,
-            anchorHash)) {
+            proofProfile)) {
       writeRaw(out, role);
     }
+    for (final byte[] guardian : guardians) writeRaw(out, guardian);
+    writeRaw(out, semanticHash);
+    writeRaw(out, anchorHash);
     return sha256(out.toByteArray());
   }
 
@@ -2056,6 +1939,7 @@ public final class SccpClientExactTests {
       final byte[] circuit,
       final byte[] keyHash,
       final byte[] proofProfile,
+      final List<byte[]> guardians,
       final byte[] semanticHash,
       final byte[] anchorHash,
       final byte[] binding,
@@ -2069,12 +1953,13 @@ public final class SccpClientExactTests {
             verifierCode,
             circuit,
             keyHash,
-            proofProfile,
-            semanticHash,
-            anchorHash,
-            binding)) {
+            proofProfile)) {
       writeRaw(deployment, role);
     }
+    for (final byte[] guardian : guardians) writeRaw(deployment, guardian);
+    writeRaw(deployment, semanticHash);
+    writeRaw(deployment, anchorHash);
+    writeRaw(deployment, binding);
     final ByteArrayOutputStream assetRoute = new ByteArrayOutputStream();
     writeVector(assetRoute, "xor".getBytes(StandardCharsets.US_ASCII));
     writeVector(assetRoute, "taira_ton_xor".getBytes(StandardCharsets.US_ASCII));
@@ -2249,16 +2134,19 @@ public final class SccpClientExactTests {
     deployment.put("outbound_proof_policy", outboundPolicy());
     deployment.put("route_address", routeAddress);
     deployment.put("route_code_hash", routeCodeHash);
+    deployment.put("replay_verifier_address", upper(0x71, 20));
+    deployment.put("replay_verifier_code_hash", upper(0x42, 32));
+    deployment.put("mint_breaker_address", upper(0x72, 20));
+    deployment.put("mint_breaker_code_hash", upper(0x43, 32));
     deployment.put("taira_to_token_multiplier", 1_000_000_000);
-    deployment.put("max_wrapped_supply", MAX_WRAPPED_SUPPLY);
+    deployment.put("max_wrapped_supply", 9_000_000_000L);
     final Map<String, Object> destination = map();
     destination.put("family", "evm");
     destination.put("deployment", deployment);
     final Map<String, Object> settlement = map();
     settlement.put("asset_definition_id", "6TEAJqbb8oEPmLncoNiMRbLEK6tw");
-    settlement.put("custody_owner", "sorauﾛ1PﾉｳﾇmEｴWｵebHﾑ6ﾔﾙｲヰiwuCWErJ7uｽoPGｱﾔnjﾑKﾋTCW2PV");
     settlement.put("payload_amount_scale", 9);
-    settlement.put("max_outstanding_liability", MAX_OUTSTANDING_LIABILITY);
+    settlement.put("max_outstanding_liability", 9);
     final Map<String, Object> route = map();
     route.put("lane_id", lane());
     route.put("route_id", "taira_bsc_xor");
@@ -2271,6 +2159,7 @@ public final class SccpClientExactTests {
     route.put("inbound_finality_cutoff", null);
     route.put("source_identity", source);
     route.put("destination", destination);
+    route.put("sora_outbound_execution_policy", soraOutboundExecutionPolicy());
     route.put("settlement", settlement);
     refreshRouteConfiguration(route);
     final Map<String, Object> laneRecord = map();
@@ -2401,6 +2290,14 @@ public final class SccpClientExactTests {
     final byte[] routeAddress = hexBytes((String) deployment.get("route_address"));
     final byte[] verifierCodeHash = hexBytes((String) deployment.get("verifier_code_hash"));
     final byte[] verifierKeyHash = hexBytes((String) deployment.get("verifier_key_hash"));
+    final byte[] replayVerifierAddress =
+        hexBytes((String) deployment.get("replay_verifier_address"));
+    final byte[] replayVerifierCodeHash =
+        hexBytes((String) deployment.get("replay_verifier_code_hash"));
+    final byte[] mintBreakerAddress =
+        hexBytes((String) deployment.get("mint_breaker_address"));
+    final byte[] mintBreakerCodeHash =
+        hexBytes((String) deployment.get("mint_breaker_code_hash"));
     final byte[] destinationBinding =
         keccak(
             concatenate(
@@ -2420,7 +2317,11 @@ public final class SccpClientExactTests {
                 verifierCodeHash,
                 verifierKeyHash,
                 semanticHash,
-                anchorHash));
+                anchorHash,
+                abiAddress(replayVerifierAddress, tron),
+                replayVerifierCodeHash,
+                abiAddress(mintBreakerAddress, tron),
+                mintBreakerCodeHash));
 
     final byte[] sourceLaneHash = SccpV1.laneHash(inboundLane);
     final byte[] destinationLaneHash =
@@ -2434,6 +2335,10 @@ public final class SccpClientExactTests {
     deploymentWords.add(semanticHash);
     deploymentWords.add(anchorHash);
     if (tron) deploymentWords.add(destinationBinding);
+    deploymentWords.add(abiAddress(replayVerifierAddress, false));
+    deploymentWords.add(replayVerifierCodeHash);
+    deploymentWords.add(abiAddress(mintBreakerAddress, false));
+    deploymentWords.add(mintBreakerCodeHash);
     final byte[] deploymentHash =
         keccak(concatenate(deploymentWords.toArray(new byte[0][])));
     final byte[] assetRouteHash =
@@ -2443,7 +2348,7 @@ public final class SccpClientExactTests {
                 keccak(((String) route.get("route_id")).getBytes(StandardCharsets.UTF_8)),
                 abiWord(((Number) route.get("revision")).longValue()),
                 abiWord(((Number) deployment.get("taira_to_token_multiplier")).longValue()),
-                abiWord(new BigInteger(deployment.get("max_wrapped_supply").toString()))));
+                abiWord(((Number) deployment.get("max_wrapped_supply")).longValue())));
     return upperHex(
         keccak(
             concatenate(
@@ -2465,27 +2370,18 @@ public final class SccpClientExactTests {
   private static long chainOrNetworkId(final SccpNetworkV1 network) {
     return switch (network) {
       case ETHEREUM_MAINNET -> 1;
-      case ETHEREUM_SEPOLIA -> 11_155_111L;
       case BSC_MAINNET -> 56;
-      case BSC_TESTNET -> 97;
       case TRON_MAINNET -> 0x2b66_53dcL;
-      case TRON_NILE -> 0xcd86_90dcL;
-      case TRON_SHASTA -> 0x94a9_059eL;
-      case TON_MAINNET, TON_TESTNET, SORA_TAIRA ->
+      case TON_MAINNET, SORA_TAIRA ->
           throw new IllegalArgumentException("expected EVM or TRON network");
     };
   }
 
   private static byte[] abiWord(final long value) {
-    return abiWord(BigInteger.valueOf(value));
-  }
-
-  private static byte[] abiWord(final BigInteger value) {
-    if (value.signum() < 0) throw new IllegalArgumentException("expected unsigned ABI integer");
+    if (value < 0) throw new IllegalArgumentException("expected unsigned ABI integer");
     final byte[] result = new byte[32];
-    for (int index = 0; index < 32; index++) {
-      result[result.length - 1 - index] =
-          value.shiftRight(index * 8).and(BigInteger.valueOf(0xff)).byteValue();
+    for (int index = 0; index < 8; index++) {
+      result[result.length - 1 - index] = (byte) ((value >>> (index * 8)) & 0xff);
     }
     return result;
   }
@@ -2646,6 +2542,48 @@ public final class SccpClientExactTests {
             canonicalArtifactBytes(SccpSubmitEncoding.NATIVE_INBOUND_PROOF_SCHEMA_NAME, 0));
   }
 
+  private static String canonicalReplayWitnessArtifact() {
+    return Base64.getEncoder()
+        .encodeToString(canonicalReplayWitnessBytes(new byte[32], new byte[32], List.of()));
+  }
+
+  private static byte[] canonicalReplayWitnessBytes(
+      final byte[] priorRecordDigest,
+      final byte[] siblingBitmap,
+      final List<byte[]> siblings) {
+    return canonicalReplayWitnessBytes(
+        SccpReplayV1.emptyHashes().get(SccpReplayV1.DEPTH),
+        priorRecordDigest,
+        siblingBitmap,
+        siblings);
+  }
+
+  private static byte[] canonicalReplayWitnessBytes(
+      final byte[] expectedRoot,
+      final byte[] priorRecordDigest,
+      final byte[] siblingBitmap,
+      final List<byte[]> siblings) {
+    final ByteArrayOutputStream siblingSequence = new ByteArrayOutputStream();
+    writeU64(siblingSequence, siblings.size());
+    for (final byte[] sibling : siblings) writeCompactField(siblingSequence, sibling);
+    final ByteArrayOutputStream payload = new ByteArrayOutputStream();
+    writeCompactField(payload, expectedRoot);
+    writeCompactField(payload, priorRecordDigest);
+    writeCompactField(payload, siblingBitmap);
+    writeCompactField(payload, siblingSequence.toByteArray());
+    final byte[] body = payload.toByteArray();
+    final NoritoHeader header =
+        new NoritoHeader(
+            SchemaHash.hash16(SccpSubmitEncoding.REPLAY_WITNESS_SCHEMA_NAME),
+            body.length,
+            CRC64.compute(body),
+            NoritoHeader.COMPACT_LEN,
+            NoritoHeader.COMPRESSION_NONE);
+    final byte[] result = Arrays.copyOf(header.encode(), NoritoHeader.HEADER_LENGTH + body.length);
+    System.arraycopy(body, 0, result, NoritoHeader.HEADER_LENGTH, body.length);
+    return result;
+  }
+
   private static byte[] canonicalArtifactBytes(
       final String schemaName, final int padding) {
     final byte[] schema = SchemaHash.hash16(schemaName);
@@ -2731,6 +2669,10 @@ public final class SccpClientExactTests {
     writeU16(body, ((Number) anchor.get("protocol_version")).intValue());
     byte[] bytes = hexBytes((String) anchor.get("chain_id_hash"));
     body.write(bytes, 0, bytes.length);
+    writeU64(body, ((Number) anchor.get("epoch")).longValue());
+    writeU64(body, ((Number) anchor.get("epoch_end_height")).longValue());
+    bytes = hexBytes((String) anchor.get("roster_commitment"));
+    body.write(bytes, 0, bytes.length);
     writeU64(body, ((Number) anchor.get("checkpoint_height")).longValue());
     bytes = hexBytes((String) anchor.get("checkpoint_block_hash"));
     body.write(bytes, 0, bytes.length);
@@ -2738,7 +2680,7 @@ public final class SccpClientExactTests {
     body.write(bytes, 0, bytes.length);
     bytes = hexBytes((String) anchor.get("checkpoint_finality_artifact_hash"));
     body.write(bytes, 0, bytes.length);
-    assert body.size() == 140;
+    assert body.size() == 188;
     return upperHex(prefixedKeccak("sccp:sora-finality-anchor:v1", body.toByteArray()));
   }
 
@@ -2784,6 +2726,18 @@ public final class SccpClientExactTests {
 
   private static void writeU64(final ByteArrayOutputStream out, final long value) {
     for (int shift = 0; shift < 8; shift++) out.write((int) ((value >>> (shift * 8)) & 0xff));
+  }
+
+  private static void writeCompactField(
+      final ByteArrayOutputStream out, final byte[] value) {
+    int remaining = value.length;
+    do {
+      int next = remaining & 0x7f;
+      remaining >>>= 7;
+      if (remaining != 0) next |= 0x80;
+      out.write(next);
+    } while (remaining != 0);
+    out.write(value, 0, value.length);
   }
 
   private static void writeU128(final ByteArrayOutputStream out, final BigInteger value) {
@@ -2841,66 +2795,41 @@ public final class SccpClientExactTests {
     return JsonEncoder.encode(value).getBytes(StandardCharsets.UTF_8);
   }
 
-  private static SccpDestinationProofSubmitRequest destinationRequest(
-      final String authority, final String destinationProofB64) {
-    return destinationRequest(authority, destinationProofB64, null, null, null);
+  private static void expectDetachedDestinationFieldsRejected(
+      final String artifact,
+      final String signature,
+      final String transaction,
+      final Long creationTimeMs) {
+    final Map<String, Object> body =
+        new LinkedHashMap<>(destinationRequest(AUTHORITY, artifact).toJsonMap());
+    if (signature != null) {
+      body.put("signature_b64", signature);
+    }
+    if (transaction != null) {
+      body.put("transaction_payload_b64", transaction);
+    }
+    if (creationTimeMs != null) {
+      body.put("creation_time_ms", creationTimeMs);
+    }
+    expectFailure(
+        () ->
+            HttpClientTransport.preflightSccpBridgeSubmitJson(
+                jsonBytes(body), "/v1/bridge/proofs/submit"));
   }
 
   private static SccpDestinationProofSubmitRequest destinationRequest(
-      final String authority,
-      final String destinationProofB64,
-      final String signatureB64,
-      final String transactionPayloadB64,
-      final Long creationTimeMs) {
+      final String authority, final String destinationProofB64) {
     return new SccpDestinationProofSubmitRequest(
-        authority,
-        destinationProofB64,
-        BRIDGE_FEE_PAYMENT,
-        signatureB64,
-        transactionPayloadB64,
-        creationTimeMs);
+        authority, destinationProofB64, BRIDGE_FEE_PAYMENT);
   }
 
   private static SccpNativeMessageSubmitRequest messageRequest(
       final String authority, final String nativeProofB64) {
-    return messageRequest(authority, nativeProofB64, null, null, null);
-  }
-
-  private static SccpNativeMessageSubmitRequest messageRequest(
-      final String authority,
-      final String nativeProofB64,
-      final String signatureB64,
-      final String transactionPayloadB64,
-      final Long creationTimeMs) {
     return new SccpNativeMessageSubmitRequest(
         authority,
         nativeProofB64,
-        BRIDGE_FEE_PAYMENT,
-        signatureB64,
-        transactionPayloadB64,
-        creationTimeMs);
-  }
-
-  private static final class SccpSubmitExecutor implements HttpTransportExecutor {
-    private final List<String> contentTypes;
-    private final List<TransportRequest> requests = new ArrayList<>();
-
-    private SccpSubmitExecutor(final List<String> contentTypes) {
-      this.contentTypes = contentTypes;
-    }
-
-    @Override
-    public CompletableFuture<TransportResponse> execute(final TransportRequest request) {
-      requests.add(request);
-      final TransportResponse.Builder builder =
-          TransportResponse.builder()
-              .setStatusCode(200)
-              .setBody("{}".getBytes(StandardCharsets.UTF_8));
-      for (final String contentType : contentTypes) {
-        builder.addHeader("Content-Type", contentType);
-      }
-      return CompletableFuture.completedFuture(builder.build());
-    }
+        canonicalReplayWitnessArtifact(),
+        BRIDGE_FEE_PAYMENT);
   }
 
   private static final class SccpNoritoExecutor implements HttpTransportExecutor {
